# docmind

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: auth.py  config.py  db.py  main.py  models.py  session.py
api/app/repos/: users.py
api/app/routes/: me.py
api/migrations/: env.py
api/migrations/versions/: 0001_users.py
api/spikes/: nvingest_spike.py
api/tests/: conftest.py  test_auth_flow.py  test_health.py  test_me.py  test_session.py  test_users_repo.py
docs/superpowers/plans/: 2026-06-19-docmind-phase1-skeleton.md  2026-06-22-docmind-phase2-ingestion.md
docs/superpowers/specs/: 2026-06-19-docmind-rag-chatbot-design.md  2026-06-22-docmind-phase2-ingestion-design.md
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  auth.tsx  main.tsx
web/src/components/: AppShell.tsx  LoginScreen.tsx
web/src/components/__tests__/: LoginScreen.test.tsx
