[project]
name = "docmind-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.3",
    "fastapi>=0.138.0",
    "grpcio>=1.81.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langdetect>=1.0.9",
    "nv-ingest-api>=26.3.0",
    "nv-ingest-client>=26.3.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.2.0",
    "pydantic-settings>=2",
    "scikit-learn>=1.9.0",
    "sqlalchemy[asyncio]>=2",
    "tritonclient[grpc]>=2.51.0",
    "unstructured-client>=0.42.8",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
